@@ -10,6 +10,11 @@ What's New in Python 3.1.4?
 Core and Builtins
 -----------------
 
+- Issue #9756: When calling a method descriptor or a slot wrapper descriptor,
+  the check of the object type doesn't read the __class__ attribute anymore.
+  Fix a crash if a class override its __class__ attribute (e.g. a proxy of the
+  str type).
+
 - Issue #6780: fix starts/endswith error message to mention that tuples are
   accepted too.
 
